[package]
name = "mimc_merkle_tree"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark-std = { version = "0.3.0" }
ark-ec = "^0.3.0"
ark-ff = "^0.3.0"
arkworks-mimc = { version = "^0.3.0", features = ["r1cs", "mimc-7-91-bn254"] }
ark-crypto-primitives = { version = "^0.3.0" }
ark-bn254 = "^0.3.0"
